@@ -4,7 +4,6 @@ package com.atlan;
 
 /* Based on original code from https://github.com/stripe/stripe-java (under MIT license) */
 import com.atlan.exception.ErrorCode;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -19,7 +18,10 @@ public abstract class Atlan {
 
     public static final String VERSION = "1.2.3-SNAPSHOT";
 
-    public static final Map<String, List<String>> EXTRA_HEADERS = Collections.emptyMap();
+    // Note: these are set here so that they can be overridden,
+    // i.e. when using the SDK in a workflow setting
+    public static final Map<String, List<String>> EXTRA_HEADERS =
+            Map.ofEntries(Map.entry("x-atlan-agent", List.of("sdk")), Map.entry("x-atlan-agent-id", List.of("java")));
 
     public static volatile boolean enableTelemetry = true;
 
